--- a/atoms/default/client/css/main.scss
+++ b/atoms/default/client/css/main.scss
@@ -68,8 +68,8 @@
 
 	.word-of-the-year-notes {
 		width: 100%;
-		color: darkgrey;
-		font-size: 13px;
+		color: #767676;
+		font-size: 0.9em;
 		clear: both;
 		font-family: 'Guardian Text Sans Web', TextSans, Arial, sans-serif;
 	}
