--- a/shared/templates/template.html
+++ b/shared/templates/template.html
@@ -19,7 +19,7 @@
   {{#if display}}<div class="word-of-the-year-message">{{message}}</div>{{/if}}
 
   <div class="word-of-the-year-notes">
-    * The results of these questions will be displayed in an end-of-year graphical feature on The Guardian. We will be filtering out particularly offensive words, but not all swear words. We are not storing any personal details with your submission, but we are creating a unique fingerprint (hash) based on your device and IP address to reduce the risk of people spamming our voting system. You can respond once per device
+    * The results of these questions will be displayed in an end-of-year graphical feature on The Guardian. We are not storing any personal details with your submission, but we are creating a unique fingerprint (hash) based on your device and IP address to reduce the risk of people spamming our voting system. You can respond once per device
   </div>
 
   {{/if}}
