--- a/shared/templates/template.html
+++ b/shared/templates/template.html
@@ -2,7 +2,7 @@
 
   {{#if participated}}
 
-  <div class="word-of-the-year-message"></div>
+  <div class="word-of-the-year-message">Thank you for taking part. The results will displayed in an end-of-year graphical feature on The Guardian.</div>
 
   {{else}}
 
